# cohort-pnl

./: .gitignore  README.md  pyproject.toml
config/: tiers.yaml  watchlist.yaml
src/cohort_pnl/: __init__.py  aggregate.py  cli.py  errors.py  output.py  snapshot.py  tiers.py
src/cohort_pnl/fetchers/: __init__.py  leaderboard.py  positions.py
tests/: test_aggregate.py  test_fetchers.py  test_tiers.py
